# learning-cmake

./: .install-linux-deps.sh  .install-osx-deps.sh  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  hello.F90
